--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2859,7 +2859,7 @@
 				top: 0;
 				width: 100%;
 				z-index: 10002;
-				background: #1f1920;
+				background: #FFFFFF;
 				box-shadow: inset 0px -2px 5px 0px rgba(0, 0, 0, 0.25);
 				font-size: 1em;
 			}
@@ -2872,6 +2872,7 @@
 					top: 0;
 					width: 100%;
 					height: 100%;
+					background-color: #FFFFFF;
 					background: url("images/overlay.png");
 					background-size: 128px 128px;
 				}
