--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2657,9 +2657,9 @@
 
 /* Mobile */
 
-	#navPanel, #titleBar {
+	/*#navPanel, #titleBar {
 		display: none;
-	}
+	}*/
 
 	@media screen and (max-width: 736px) {
 
@@ -2786,7 +2786,7 @@
 				padding-bottom: 1px;
 			}
 
-			#navButton {
+			/*#navButton {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
@@ -2945,7 +2945,7 @@
 				-webkit-transform: translateY(0);
 				-ms-transform: translateY(0);
 				transform: translateY(0);
-			}
+			}*/
 
 		/* Wrapper */
 
