--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2657,9 +2657,9 @@
 
 /* Mobile */
 
-	/*#navPanel, #titleBar {
+	#navPanel, #titleBar {
 		display: none;
-	}*/
+	}
 
 	@media screen and (max-width: 736px) {
 
